# af-metrics

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.cfg  setup.py
af_metrics/: __init__.py  _version.py  monitoring_module.py
af_metrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
af_metrics/.cph/: .__init__.py_f20a08265a5bd3f9ad35d410504ea23f.prob
docs/: conf.py  main.py  requirements.txt
notebook-examples/: example.ipynb  example.py
python-application/src/: requirements.txt
src/: main.py  requirements.txt
src/af_metrics/: __init__.py  _version.py  monitoring_module.py
src/af_metrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_package.py
